From release 0.3.3:
 - Bump version number to 0.4.0 (0.4.0dev while under development)
 - Migrate sourceforge repository to svn
 - Port to Qt4
 - Precompiled headers
 - CHANGES renamed to NEWS
 - License boilerplate managed by "headache"

From release 0.3.2:
 - Bump version number to 0.3.3 (dev while under development)
 - Add menu entry
 - Update for etch & edgy (warning-free c++, package building)

From release 0.3.1:
 - Bump version number to 0.3.2 (dev while under development)
 - Reinstate weather systems (spinbox to control number).
 - Various commandline options (uses boost::program_options).
 - Save to texture, shaded and unshaded.
 - Illumination direction control

From release 0.3.0:
 - Bump version number to 0.3.1dev
 - Use boost's mt19937 for random number generation.
 - Minor GUI improvement (terrain type pull down).
 - Add simple man page.
 - Deb building script.

From release 0.2.0:
 - Bump version number to 0.3.0
 - Different flat terrain types 
 - Blender export (faux alpha for clouds).
 - Internal changes (RGB to RGBA, overload alpha for emission)
 - Built in docs
 - Cloud layer (with Blender and POV support).
 - Render (OpenGL) background colour control

From release 0.1.0:
 - Bump version number to 0.2.0
 - Progress dialog separated and better behaved
 - Variation uses % scale for consistency (was 1/1000ths before)
 - Cosmetic changes
 - Add multiscale Perlin noise step
 - River generation faster and more reliable.
 - Subdivision enumerated as 1...levels in progress dialog (not from zero)
 - Improvements to river generation memory usage.
 - Saved povray file no longer needs colors.inc

From release 0.0.3:
 - Bump version number to 0.1.0
 - Support emissive oceans and rivers (including POV save)
 - Fix .inc filename bug (spurious ")
 - Update docs
 - Viewer to separate top-level.
 - Don't burn CPU when OpenGL area not visible.
 - Crude flight-simulator mode.  Joystick-mouse selector.
 - Save uses Qt file-picker dialog
 - Slider control of ambient